# automation_auditor

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rubric.json
audit/report_bypeer_received/: report.md
audit/report_onself_generated/: report.md
docs/: architectural.md  design_notes.md  langsmith_trace.md
reports/: interim_report.md  interim_report_improved.docx
src/: __init__.py  cli.py  graph.py  state.py  tracing.py  ui.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
